[gd_scene load_steps=20 format=3 uid="uid://ctd7fvwoat1mi"]

[ext_resource type="Texture2D" uid="uid://bk0m8jyifajxp" path="res://Sprites/board.png" id="1_o4js7"]
[ext_resource type="Script" path="res://Scripts/Floor.gd" id="3_cq8i4"]
[ext_resource type="PackedScene" uid="uid://co7tx54ruvhnc" path="res://Entities/Player.tscn" id="3_k45l6"]
[ext_resource type="Texture2D" uid="uid://c554a2k4uiyu" path="res://Sprites/score-digit.png" id="4_1wg1c"]
[ext_resource type="AudioStream" uid="uid://pcdjatobtke0" path="res://Sounds/player_bounce.mp3" id="4_a5yub"]
[ext_resource type="Script" path="res://Scripts/Score.gd" id="4_jwrj1"]
[ext_resource type="AudioStream" uid="uid://suy6f72nx8qr" path="res://Sounds/brick_collide.mp3" id="4_sbyut"]
[ext_resource type="AudioStream" uid="uid://kf3vepo1kkdb" path="res://Sounds/brick_gold_collide.mp3" id="5_smn3j"]
[ext_resource type="Texture2D" uid="uid://v63tedvdoml2" path="res://Sprites/board-overlay.png" id="6_7w8pq"]
[ext_resource type="FontFile" uid="uid://dr4ih4cnd4k0" path="res://Fonts/unlit-small.fnt" id="6_kq815"]
[ext_resource type="Script" path="res://Scripts/LivesCounter.gd" id="7_4bgb1"]
[ext_resource type="Script" path="res://Scripts/BricksRemaining.gd" id="7_rgihb"]
[ext_resource type="AudioStream" uid="uid://ct10vtfxsg3sw" path="res://Sounds/multiball.mp3" id="9_d7abw"]
[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="10_ky54i"]
[ext_resource type="FontFile" uid="uid://c0jh8oaysm33t" path="res://Fonts/lit-large.fnt" id="10_r88b8"]
[ext_resource type="FontFile" uid="uid://bk6hofltd6osx" path="res://Fonts/unlit-large.fnt" id="11_q5ex4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehwct"]
size = Vector2(12, 177)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5jhoc"]
size = Vector2(226, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a157"]
size = Vector2(252, 20)

[node name="Level" type="Node2D"]

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_o4js7")

[node name="Board-overlay" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(160, 90)
texture = ExtResource("6_7w8pq")

[node name="BricksContainer" type="Node" parent="."]

[node name="Powerups" type="Node" parent="."]

[node name="PowerupEffects" type="Node" parent="."]

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="WallLeft" type="CollisionShape2D" parent="Walls"]
z_index = 2
position = Vector2(6, 88)
shape = SubResource("RectangleShape2D_ehwct")

[node name="WallRight" type="CollisionShape2D" parent="Walls"]
z_index = 2
position = Vector2(244, 88.5)
shape = SubResource("RectangleShape2D_ehwct")

[node name="WallTop" type="CollisionShape2D" parent="Walls"]
z_index = 2
position = Vector2(125, -6)
shape = SubResource("RectangleShape2D_5jhoc")

[node name="Floor" type="StaticBody2D" parent="."]
collision_layer = 2
script = ExtResource("3_cq8i4")

[node name="Floor" type="CollisionShape2D" parent="Floor"]
position = Vector2(119, 190)
shape = SubResource("RectangleShape2D_5a157")

[node name="PlayerItems" type="Node" parent="."]

[node name="Player" parent="PlayerItems" instance=ExtResource("3_k45l6")]
position = Vector2(126, 153)

[node name="Balls" type="Node" parent="PlayerItems"]

[node name="Score" type="Node" parent="PlayerItems"]
script = ExtResource("4_jwrj1")

[node name="Digit1" type="Sprite2D" parent="PlayerItems/Score"]
z_index = 5
position = Vector2(253, 167)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit2" type="Sprite2D" parent="PlayerItems/Score"]
z_index = 5
position = Vector2(266, 167)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit3" type="Sprite2D" parent="PlayerItems/Score"]
z_index = 5
position = Vector2(279, 167)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit4" type="Sprite2D" parent="PlayerItems/Score"]
z_index = 5
position = Vector2(292, 167)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit5" type="Sprite2D" parent="PlayerItems/Score"]
z_index = 5
position = Vector2(305, 167)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="LevelCounter" type="Node" parent="PlayerItems"]

[node name="Lvl" type="Label" parent="PlayerItems/LevelCounter"]
z_index = 4
offset_left = 244.0
offset_top = 127.0
offset_right = 284.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("6_kq815")
text = "LV"

[node name="Digit1" type="Sprite2D" parent="PlayerItems/LevelCounter"]
z_index = 5
position = Vector2(279, 144)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit2" type="Sprite2D" parent="PlayerItems/LevelCounter"]
z_index = 5
position = Vector2(292, 144)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit3" type="Sprite2D" parent="PlayerItems/LevelCounter"]
z_index = 5
position = Vector2(305, 144)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="LivesCounter" type="Node" parent="PlayerItems"]
script = ExtResource("7_4bgb1")

[node name="x" type="Label" parent="PlayerItems/LivesCounter"]
offset_left = 269.0
offset_top = 64.0
offset_right = 283.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("6_kq815")
text = "x"

[node name="Digit1" type="Sprite2D" parent="PlayerItems/LivesCounter"]
z_index = 5
position = Vector2(289, 81)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit2" type="Sprite2D" parent="PlayerItems/LivesCounter"]
z_index = 5
position = Vector2(302, 81)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="BricksRemaining" type="Node" parent="PlayerItems"]
script = ExtResource("7_rgihb")

[node name="Digit1" type="Sprite2D" parent="PlayerItems/BricksRemaining"]
z_index = 5
position = Vector2(257, 104)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit2" type="Sprite2D" parent="PlayerItems/BricksRemaining"]
z_index = 5
position = Vector2(280, 104)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="Digit3" type="Sprite2D" parent="PlayerItems/BricksRemaining"]
z_index = 5
position = Vector2(303, 104)
texture = ExtResource("4_1wg1c")
region_enabled = true
region_rect = Rect2(0, 180, 13, 18)

[node name="GameOver" type="Node" parent="PlayerItems"]
script = ExtResource("10_ky54i")

[node name="GameOver" type="Label" parent="PlayerItems/GameOver"]
visible = false
z_index = 5
offset_left = 67.0
offset_top = 68.0
offset_right = 180.0
offset_bottom = 97.0
theme_override_fonts/font = ExtResource("10_r88b8")
text = "GAME OVER"

[node name="GameOver2" type="Label" parent="PlayerItems/GameOver"]
visible = false
z_index = 4
offset_left = 69.0
offset_top = 70.0
offset_right = 182.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("11_q5ex4")
text = "GAME OVER"

[node name="Timer" type="Timer" parent="PlayerItems/GameOver"]
wait_time = 5.0

[node name="Sounds" type="Node" parent="."]

[node name="PlayerSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_a5yub")

[node name="BrickSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_sbyut")

[node name="BrickMetalSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_smn3j")

[node name="MultiballSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_d7abw")

[connection signal="timeout" from="PlayerItems/GameOver/Timer" to="PlayerItems/GameOver" method="_on_timer_timeout"]
